src/test/ui/lexer/lex-bad-char-literals-1.stderr
error: numeric character escape is too short
  --> $DIR/lex-bad-char-literals-1.rs:2:6
   |
LL |     '\x1'
   |      ^^^

error: numeric character escape is too short
  --> $DIR/lex-bad-char-literals-1.rs:6:6
   |
LL |     "\x1"
   |      ^^^

error: unknown character escape: `\u{25cf}`
  --> $DIR/lex-bad-char-literals-1.rs:10:7
   |
LL |     '\●'
   |       ^ unknown character escape
   |
   = help: for more information, visit <https://static.rust-lang.org/doc/master/reference.html#literals>
help: if you meant to write a literal backslash (perhaps escaping in a regular expression), consider a raw string literal
   |
LL |     r"\●"
   |     ~~~~~

error: unknown character escape: `\u{25cf}`
  --> $DIR/lex-bad-char-literals-1.rs:14:7
   |
LL |     "\●"
   |       ^ unknown character escape
   |
   = help: for more information, visit <https://static.rust-lang.org/doc/master/reference.html#literals>
help: if you meant to write a literal backslash (perhaps escaping in a regular expression), consider a raw string literal
   |
LL |     r"\●"
   |     ~~~~~

error: aborting due to 4 previous errors

